fix: navbar too tall, footer clipping through

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,6 +1,9 @@
 @use '../../style/icons' as icons;
 
 #page-footer {
+  grid-column: span 2;
+  grid-row: 2;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
