--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -2,6 +2,9 @@
 
 .navbar {
   & {
+    grid-column: 1;
+    grid-row: 1;
+
     min-width: 15%;
     height: 100%;
     border-right: 1px solid var(--neutral);
